Bugfix 4437  [Chrome] Visual Editor button bars don't wrap if the window is resized

--- a/Website/Composite/content/misc/editors/visualeditor/visualeditor.css
+++ b/Website/Composite/content/misc/editors/visualeditor/visualeditor.css
@@ -31,6 +31,10 @@ ui|toolbarbutton.isdisabled {
 	filter: url("${root}/templates/grayscalefilter.xml#grayscale");
 	opacity: 0.35;
 }
+
+ui|toolbar {
+	white-space: normal;
+}
 ui|toolbar#statusbar {
 	border-top: none;
 }
